--- a/data/submit.html
+++ b/data/submit.html
@@ -1,6 +1,6 @@
 HTTP/1.1 200 OK
 Server: Java/0
-Content-Length: 1077
+Content-Length: 1271
 Content-Type: text/html
 
 <!doctype html>
@@ -26,9 +26,10 @@ color:#cc9900;
 <a href="/problems.html" class="current">题目</a>&nbsp;&nbsp;&nbsp;
 <hr>
 <h2>提交题目 <span id="pid00"></span></h2>
-<form method="POST" action="/submit">
-<input id="pid01" name="pid" type="hidden"></input>
-<textarea name="code"></textarea>
+<form method="POST" action="/submit" enctype="application/x-www-form-urlencoded">
+<input id="pid01" name="pid" type="hidden"></input><br>
+语言：<select name="lang" required><option value="">请选择语言</option><option value="1">C++</option></select><br><br>
+代码：<textarea name="code" required></textarea>
 <br>
 <input type="submit" value="开始评测！"></input>
 </form>
