--- a/data/submit.html
+++ b/data/submit.html
@@ -1,6 +1,6 @@
 HTTP/1.1 200 OK
 Server: Java/0
-Content-Length: 1271
+Content-Length: 1299
 Content-Type: text/html
 
 <!doctype html>
@@ -28,7 +28,7 @@ color:#cc9900;
 <h2>提交题目 <span id="pid00"></span></h2>
 <form method="POST" action="/submit" enctype="application/x-www-form-urlencoded">
 <input id="pid01" name="pid" type="hidden"></input><br>
-语言：<select name="lang" required><option value="">请选择语言</option><option value="1">C++</option></select><br><br>
+语言：<select name="lang" required><option value="">请选择语言</option><option value="1">C</option><option value="2">C++</option></select><br><br>
 代码：<textarea name="code" required></textarea>
 <br>
 <input type="submit" value="开始评测！"></input>
